heavy refactoring, remove route_protocol
